<resources>
    <string name="app_name">Topic News</string>

    <string name="title_topic_news">Topic News</string>
    <string name="title_news_detail">Detail View</string>
    <string name="title_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="sync_account_type" translatable="false">topicnews.finalproject.com</string>
    <string name="content_authority" translatable="false">com.android.udacity.google.topicnews.app</string>

    <string name="tag_fragment_genre_list" translatable="false">FRAGMENT_GENRE_LIST</string>
    <string name="tag_fragment_news_detail" translatable="false">FRAGMENT_NEWS_DETAIL</string>

    <string name="on" translatable="false">ON</string>
    <string name="off" translatable="false">OFF</string>

    <string name="pref_topic_selecion">Topic Selection</string>
    <string name="pref_key_nation" translatable="false">nation</string>
    <string name="pref_key_politics" translatable="false">politics</string>
    <string name="pref_key_sports" translatable="false">sports</string>
    <string name="pref_key_technology" translatable="false">technology</string>
    <string name="pref_key_world" translatable="false">world</string>
    <string name="pref_key_society" translatable="false">society</string>
    <string name="pref_key_entertainment" translatable="false">entertainment</string>
    <string name="pref_key_pickup" translatable="false">spotlight</string>
    <string name="topic_nation">Nation</string>
    <string name="topic_politics">Politics</string>
    <string name="topic_sports">Sports</string>
    <string name="topic_technology">Technology</string>
    <string name="topic_world">World</string>
    <string name="topic_society">Society</string>
    <string name="topic_entertainment">Entertainment</string>
    <string name="topic_pickup">Spotlight</string>

    <string name="pref_last_notification" translatable="false">last_notification</string>

    <string name="list_content_no_genre">no selected genres\n
    (Please go to Settings and select news genres)</string>
    <string name="list_content_no_topic">Please select news genre from left pane</string>

</resources>
